--- a/proj/proj.ipynb
+++ b/proj/proj.ipynb
@@ -27,8 +27,8 @@
    "source": [
     "## Exercice 2A\n",
     "### 2.1\n",
-    "Discuter du maximum de la fonction d'utilité $U(x,y)=3x^3 + x^2 y - 17x^2 - 4xy + 17x - y + 5$ sous les contraintes $x\\geq 0$, $y\\geq 0$ et la contrainte de revenu $5x+3y\\leq r$ pour $r=20$ puis pour $r=5$.\n"
-    "Vérifier avec un dessin du graphe de $U$.\n"    
+    "Discuter du maximum de la fonction d'utilité $U(x,y)=3x^3 + x^2 y - 17x^2 - 4xy + 17x - y + 5$ sous les contraintes $x\\geq 0$, $y\\geq 0$ et la contrainte de revenu $5x+3y\\leq r$ pour $r=20$ puis pour $r=5$.\n",
+    "Vérifier avec un dessin du graphe de $U$.\n",
     "\n",
     "### 2.2\n",
     "Soit $U:(x,y)\\mapsto U(x,y)$ une fonction d'utilité (à valeurs dans $\\mathbf{R}$) dont on cherche le maximum sous les contraintes conjointes $c_1(x,y)\\leq 0$, $c_2(x,y)\\leq 0$ et $c_3(x,y)\\leq 0$. On ne précise ni $U$ ni les $c_i$.\n",
@@ -63,8 +63,8 @@
    "source": [
     "## Exercice 2B\n",
     "### 2.1\n",    
-    "Discuter du maximum de la fonction d'utilité $U(x,y)=2x^3 + x^2 y - 9x^2 - 2xy + 2x - 4y + 20$ sous les contraintes $x\\geq 0$, $y\\geq 0$ et la contrainte de revenu $5x+3y\\leq r$ pour $r=5$ puis pour $r=20$.\n"
-    "Vérifier avec un dessin du graphe de $U$.\n"    
+    "Discuter du maximum de la fonction d'utilité $U(x,y)=2x^3 + x^2 y - 9x^2 - 2xy + 2x - 4y + 20$ sous les contraintes $x\\geq 0$, $y\\geq 0$ et la contrainte de revenu $5x+3y\\leq r$ pour $r=5$ puis pour $r=20$.\n",
+    "Vérifier avec un dessin du graphe de $U$.\n",
     "\n",
     "### 2.2\n",
     "Soit $U:(x,y)\\mapsto U(x,y)$ une fonction d'utilité (à valeurs dans $\\mathbf{R}$) dont on cherche le maximum sous les contraintes conjointes $c_1(x,y)\\leq 0$, $c_2(x,y)\\leq 0$ et $c_3(x,y)\\leq 0$. On ne précise ni $U$ ni les $c_i$.\n",
